--- a/.github/workflows/actions_release.yml
+++ b/.github/workflows/actions_release.yml
@@ -7,9 +7,9 @@ on:
         description: "Tag for the release"
         required: true
       script:
-        description: "Specify the build script to run"
-        required: true
-        type: string
+        description: "Specify a script to run after audit fix"
+        required: false
+        default: "yarn all"
 
 permissions:
   contents: read
