--- a/.github/workflows/audit_package.yml
+++ b/.github/workflows/audit_package.yml
@@ -1,21 +1,21 @@
-name: NPM Audit Fix Run
+name: Yarn Audit Fix Run
 
 on:
   workflow_dispatch:
     inputs:
-      force:
-        description: "Use --force flag for npm audit fix?"
-        required: true
-        type: boolean
       base_branch:
         description: "Specify a base branch"
         required: false
         default: "main"
+      package_manager:
+        description: "Specify package manager (npm or yarn)"
+        required: false
+        default: "yarn"
       script:
-        description: "Specify the build script to run"
-        required: true
-        type: string
-
+        description: "Specify a script to run after audit fix"
+        required: false
+        default: "yarn all"
+  
   schedule:
     - cron: "0 0 * * 1"
 
@@ -23,9 +23,9 @@ jobs:
   audit-fix:
     uses: step-security/reusable-workflows/.github/workflows/audit_fix.yml@v1
     with:
-      force: ${{ inputs.force || false }}
       base_branch: ${{ inputs.base_branch || 'main' }}
-      script: "${{ inputs.script || 'yarn all'}}"
+      package_manager: "yarn"
+      script: ${{ inputs.script || 'yarn run all' }}
 
 permissions:
   contents: write
